# latensee

./: .gitignore  Cargo.toml  README.md
docs/plans/: 2026-06-15-pplot-design.md
src/: config.rs  lib.rs  main.rs
src/probe/: icmp.rs  mod.rs  socket.rs  tcp.rs  tcp_connect.rs  udp.rs
src/report/: csv_report.rs  format.rs  json.rs  mod.rs  text.rs
src/trace/: dns.rs  mod.rs  state.rs
src/tui/: health.rs  mod.rs
src/tui/widgets/: help.rs  hop_table.rs  latency_chart.rs  mod.rs  summary.rs  target_list.rs
tests/: integration.rs
