[package]
name = "pplot"
version = "0.1.0"
edition = "2021"
description = "Continuous traceroute with per-hop latency visualization"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
socket2 = { version = "0.5", features = ["all"] }
pnet = "0.35"
hickory-resolver = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
